# trader

./: .gitignore  Cargo.toml  README.md  log_TASE.txt  log_bfb.txt  log_dogemarket.txt  tase.txt  visualizer_data.txt
src/: lib.rs  main.rs  trader.rs
src/trader/: trader_errors.rs  trader_fancy_prints.rs
