[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tase = { version = "0.1.3", registry = "kellnr" }
bfb = { version = "0.1.1", registry = "kellnr" }
bose = { version = "1.0.72", registry = "kellnr" }
colored = "2.0.0"
doge = { version = "1.0.0", registry = "kellnr" }
market_common = { version = "1.0.10", registry = "kellnr", package = "unitn_market_2022" }
play = "0.5.3"

