[package]
name = "fancy_trader"
version = "0.1.0"
edition = "2021"


[dependencies]
tase = { version = "0.1.3", registry = "kellnr" }
bfb = { version = "0.1.2", registry = "kellnr" }
bose = { version = "1.0.75", registry = "kellnr" }
colored = "2.0.0"
doge = { version = "1.0.1", registry = "kellnr" }
market_common = { version = "1.0.10", registry = "kellnr", package = "unitn_market_2022" }
gtk_plotter = {git = "https://github.com/simusclay/gtk_plotter.git"}
serde_json = "1.0"
